chore: refactor DTO and service classes, update package structure, and add JWE token handling